fix: spacing

--- a/styles/animations.css
+++ b/styles/animations.css
@@ -39,15 +39,15 @@
   }
 }
 
-.animate-slide-in {
-  animation: slide-in 0.3s forwards;
+.animate-slide-left-in {
+  animation: slide-left-in 0.3s forwards;
 }
 
-.animate-slide-out {
-  animation: slide-out 0.3s forwards;
+.animate-slide-left-out {
+  animation: slide-left-out 0.3s forwards;
 }
 
-@keyframes slide-in {
+@keyframes slide-left-in {
   0% {
     transform: translateX(-8px);
     opacity: 0;
@@ -58,9 +58,36 @@
   }
 }
 
-@keyframes slide-out {
+@keyframes slide-left-out {
   100% {
     transform: translateX(-8px);
+    opacity: 0;
+  }
+}
+
+
+.animate-slide-right-in {
+  animation: slide-right-in 0.3s forwards;
+}
+
+.animate-slide-right-out {
+  animation: slide-right-out 0.3s forwards;
+}
+
+@keyframes slide-right-in {
+  0% {
+    transform: translateX(8px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-right-out {
+  100% {
+    transform: translateX(8px);
     opacity: 0;
   }
 }
